--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -2,7 +2,6 @@
 
 section {
   &.new-tweet {
-    width: 100%;
     margin-top: 5%;
     border-radius: 10px;
     box-shadow: 0 0 15px 0px rgb(161, 143, 143);
